# Universal-Memory

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
unimem/: __init__.py
unimem/api/: __init__.py  app.py  schemas.py
unimem/config/: config.py  settings.py
unimem/core/: memory_client.py
unimem/db/: __init__.py  bootstrap.py  session.py
unimem/embeddings/: __init__.py
unimem/extractor/: __init__.py  extractor.py
unimem/llm/: local_llm.py
unimem/models/: memory.py
unimem/retrieval/: scoring.py
unimem/services/: llm_service.py  memory_service.py  retrieval_service.py
unimem/storage/: kv_store.py  vector_store.py
unimem_release_v1/: LICENSE  MANIFEST.in  README.md  pyproject.toml
unimem_release_v1/unimem/: __init__.py
unimem_release_v1/unimem/api/: app.py  deps.py  schemas.py
unimem_release_v1/unimem/config/: __init__.py  config.py  settings.py
unimem_release_v1/unimem/core/: __init__.py  logger.py  memory_client.py
unimem_release_v1/unimem/db/: bootstrap.py
unimem_release_v1/unimem/embeddings/: embedder.py
unimem_release_v1/unimem/extractor/: extractor.py
unimem_release_v1/unimem/llm/: __init__.py
unimem_release_v1/unimem/models/: __init__.py  memory.py
unimem_release_v1/unimem/retrieval/: __init__.py  retriever.py  scoring.py
unimem_release_v1/unimem/services/: __init__.py  llm_service.py  memory_service.py  retrieval_service.py
unimem_release_v1/unimem/storage/: __init__.py
website/: index.html  main.js  style.css
