[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "unimem"
version = "0.2.0"
description = "A unified memory layer for LLM applications"
readme = "README.md"
requires-python = ">=3.10"

authors = [
    { name = "Your Name" }
]

dependencies = [
    "pydantic>=2.0",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "pgvector>=0.2",
    "requests>=2.31"
]

# Optional (better practice)
[project.optional-dependencies]
ml = [
    "sentence-transformers>=2.6"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["unimem*"]
exclude = ["examples*", "__pycache__*"]